[package]
edition = "2021"
name = "bevy_survivors"
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13"
bevy_pkv = "0.10.0"
fastrand = "2.0.1"
serde = { version = "1.0.197", features = ["derive"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "z"

[dev-dependencies]
bevy-inspector-egui = "0.23.2"
